# backtestsystem

./: 000300.csv  000913.csv  399006.csv  399808.csv  399998.csv  930608.csv  indicator.py  main.py  pyproject.toml  strategy.py
index_history_data/: 000001.csv  000009.csv  000010.csv  000015.csv  000016.csv  000018.csv  000021.csv  000029.csv  000036.csv  000037.csv  000038.csv  000042.csv  000044.csv  000046.csv  000048.csv  000056.csv  000063.csv  000064.csv  000065.csv  000066.csv  000068.csv  000069.csv  000171.csv  000300.csv  000688.csv  000802.csv  000811.csv  000812.csv  000813.csv  000814.csv  000815.csv  000819.csv  000821.csv  000827.csv  000852.csv  000860.csv  000901.csv  000903.csv  000905.csv  000906.csv  (+144 more)
