[tool.poetry]
name = "backtestsystem"
version = "0.1.0"
description = ""
authors = ["徐焱挺 <xuyanting@lidig.com>"]

[tool.poetry.dependencies]
python = "^3.9"
backtrader = "^1.9.76"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
TA-Lib = "^0.4.21"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
